--- a/src/views/layouts/main.html
+++ b/src/views/layouts/main.html
@@ -3,10 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="https://cdn.tailwindcss.com"></script>
+        <script src="/javascript/htmx/htmx-1.9.6.min.js"></script>
+        <!-- <script src="/javascript/main.js"></script> -->
+        <link rel="stylesheet" href="/css/output.min.css">
     </head>
 
     <body>
-        {{embed}}
+        <div class="container mx-auto">
+            {{ embed }}
+        </div>
     </body>
 </html>
