--- a/src/views/layouts/main.html
+++ b/src/views/layouts/main.html
@@ -1,16 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="/javascript/htmx/htmx-1.9.6.min.js"></script>
-        <!-- <script src="/javascript/main.js"></script> -->
-        <link rel="stylesheet" href="/css/output.min.css">
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="/javascript/htmx/htmx-1.9.6.min.js"></script>
+    <!-- <script src="/javascript/main.js"></script> -->
+    <link rel="stylesheet" href="/css/output.min.css" />
+  </head>
 
-    <body>
-        <div class="container mx-auto">
-            {{ embed }}
-        </div>
-    </body>
+  <body>
+    <div class="container mx-auto">{{ embed }}</div>
+  </body>
 </html>
