--- a/src/views/homePage/home.html
+++ b/src/views/homePage/home.html
@@ -1,3 +1,9 @@
 {{ define "homePage/home" }}
-<h1>Home Page</h1>
+
+{{template "partials/header" .}}
+
+<div class="container mx-auto">
+  <h1>Home Page</h1>
+</div>
+
 {{ end }}
