Implementing POC Header bar. It's starting to take shape.

--- a/src/views/homePage/home.html
+++ b/src/views/homePage/home.html
@@ -1,6 +1,4 @@
-{{ define "homePage/home" }}
-
-{{template "partials/header" .}}
+{{ define "homePage/home" }} {{template "partials/header" .}}
 
 <div class="container mx-auto">
   <h1>Home Page</h1>
