--- a/src/views/partials/header.html
+++ b/src/views/partials/header.html
@@ -1,3 +1,12 @@
-<div class="flex h-14 bg-white shadow-md">
-  <div class="m-auto font-medium">My Amazing & Cool Website</div>
-</div>
+<header
+  class="flex flex-row justify-between items-center py-3 bg-white shadow-md"
+>
+  <div class="w-1/6 pl-9 font-medium">Pondr</div>
+  <div class="w-4/6 flex-grow px-12">
+    <input
+      class="w-full h-9 border border-gray-300 focus:outline-none focus:border-sky-500 focus:ring-1 focus:ring-sky-500 px-2 rounded shadow-inner"
+      placeholder="Search..."
+    />
+  </div>
+  <div class="w-1/6 pl-9 font-medium">Profile</div>
+</header>
