--- a/src/views/layouts/main.html
+++ b/src/views/layouts/main.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="/javascript/htmx/htmx-1.9.6.min.js"></script>
+    <script src="https://unpkg.com/htmx.org"></script>
+    <!-- <script src="/javascript/htmx/htmx-1.9.6.min.js"></script> -->
     <!-- <script src="/javascript/main.js"></script> -->
     <link rel="stylesheet" href="/css/output.min.css" />
   </head>
