--- a/src/views/partials/header.html
+++ b/src/views/partials/header.html
@@ -2,11 +2,13 @@
   class="flex flex-row justify-between items-center py-3 bg-white shadow-md"
 >
   <div class="w-1/6 pl-9 font-medium">Pondr</div>
-  <div class="w-4/6 flex-grow px-12">
+  <div class="w-4/6 flex-grow px-12 h-9">
+    {{ if .ShowSearch }}
     <input
-      class="w-full h-9 border border-gray-300 focus:outline-none focus:border-sky-500 focus:ring-1 focus:ring-sky-500 px-2 rounded shadow-inner"
+      class="w-full h-full border border-gray-300 focus:outline-none focus:border-sky-500 focus:ring-1 focus:ring-sky-500 px-2 rounded shadow-inner"
       placeholder="Search..."
     />
+    {{ end }}
   </div>
   <div class="w-1/6 pl-9 font-medium">Profile</div>
 </header>
