Added profile page

--- a/src/views/pages/home/form.html
+++ b/src/views/pages/home/form.html
@@ -1,4 +1,4 @@
-{{ define "homePage/form" }}
+{{ define "home/form" }}
 <form hx-put="/contact/{{ .id }}" hx-target="this">
   <div class="pt-2">
     <label>First Name</label>
