--- a/src/views/partials/header.html
+++ b/src/views/partials/header.html
@@ -1,14 +1,17 @@
-<header
-  class="flex flex-row justify-between items-center py-3 bg-white shadow-md"
->
-  <div class="w-1/6 pl-9 font-medium">Pondr</div>
-  <div class="w-4/6 flex-grow px-12 h-9">
+<header class="navbar h-9 bg-base-200 shadow-md">
+  <div class="flex-none font-medium">
+    <a class="px-6" href="/">Pondr</a>
+  </div>
+  <div class="flex-1 justify-center py-2">
     {{ if .ShowSearch }}
     <input
-      class="w-full h-full border border-gray-300 focus:outline-none focus:border-sky-500 focus:ring-1 focus:ring-sky-500 px-2 rounded shadow-inner"
+      type="text"
       placeholder="Search..."
+      class="input input-bordered w-full max-w-xl"
     />
     {{ end }}
   </div>
-  <div class="w-1/6 pl-9 font-medium">Profile</div>
+  <div class="flex-none font-medium">
+    <a class="px-6" href="/profile">Profile</a>
+  </div>
 </header>
