Added post partial

--- a/src/views/layouts/main.html
+++ b/src/views/layouts/main.html
@@ -15,7 +15,7 @@
     <!-- <link rel="stylesheet" href="/css/output.min.css" /> -->
   </head>
 
-  <body>
+  <body class="h-screen">
     {{ embed }}
   </body>
 </html>
