--- a/src/views/partials/post.html
+++ b/src/views/partials/post.html
@@ -7,8 +7,8 @@
     <div class="card-actions justify-start">
       <div><span>Author Id: </span>{{.AuthorId}}</div>
       <div>
-        <span>Created At: </span>{{.CreatedAt.Format "Jan 02, 2006 15:04:05
-        UTC"}}
+        <span>Created At: </span>
+        {{.CreatedAt.Format "Jan 02, 2006 15:04:05 UTC"}}
       </div>
     </div>
   </div>
