--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --header-height: 64px;
+}
+
+.header-height {
+  height: var(--header-height);
+}
+
+.main-container {
+  height: calc(100vh - var(--header-height));
+}
