--- a/src/views/pages/home/show.html
+++ b/src/views/pages/home/show.html
@@ -1,17 +1,7 @@
 {{ define "home/show" }} {{template "partials/header" .}}
 <div class="container mx-auto">
   <div class="px-6 py-4" hx-target="this" hx-swap="innerHTML">
-    <div><label>ID</label> {{ .id }}</div>
-    <div><label>First Name</label>: {{ .firstName }}</div>
-    <div><label>Last Name</label>: {{ .lastName }}</div>
-    <div><label>Email</label>: {{ .email }}</div>
-
-    <button
-      class="mt-4 bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 border border-blue-500 rounded"
-      hx-get="/contact/{{ .id }}/edit"
-    >
-      Click To Edit
-    </button>
+    <div class="px-2 py-4">{{template "partials/post" .Post}}</div>
   </div>
 </div>
 {{ end }}
