--- a/src/views/partials/header.html
+++ b/src/views/partials/header.html
@@ -1,4 +1,4 @@
-<header class="navbar h-9 sticky top-0 bg-base-200 shadow-md">
+<header class="navbar header-height sticky top-0 bg-base-200 shadow-md">
   <div class="flex-none font-medium">
     <a class="px-6" href="/">Pondr</a>
   </div>
