--- a/src/views/partials/post.html
+++ b/src/views/partials/post.html
@@ -1,15 +1,17 @@
-<div
-  class="card w-96 bg-base-200 shadow-md hover:shadow-xl border border-base-200 hover:border-neutral hover:cursor-pointer"
->
-  <div class="card-body">
-    <h2 class="card-title">{{.Title}}</h2>
-    <p>{{.Text}}</p>
-    <div class="card-actions justify-start">
-      <div><span>Author Id: </span>{{.AuthorId}}</div>
-      <div>
-        <span>Created At: </span>
-        {{.CreatedAt.Format "Jan 02, 2006 15:04:05 UTC"}}
+<a href="/post/{{ .Id }}">
+  <div
+    class="card w-96 bg-base-200 hover:shadow-xl border border-base-200 hover:border-neutral hover:cursor-pointer"
+  >
+    <div class="card-body">
+      <h2 class="card-title">{{.Title}}</h2>
+      <p>{{.Text}}</p>
+      <div class="card-actions justify-start">
+        <div><span>Author Id: </span>{{.AuthorId}}</div>
+        <div>
+          <span>Created At: </span>
+          {{.CreatedAt.Format "Jan 02, 2006 15:04:05 UTC"}}
+        </div>
       </div>
     </div>
   </div>
-</div>
+</a>
