Updated version of dasiyUI

--- a/src/views/partials/post.html
+++ b/src/views/partials/post.html
@@ -1,6 +1,6 @@
 <a href="/post/{{ .Id }}">
   <div
-    class="card w-96 bg-base-200 hover:shadow-xl border border-base-200 hover:border-neutral hover:cursor-pointer"
+    class="card w-96 bg-base-200 border border-base-200 hover:border-neutral hover:cursor-pointer"
   >
     <div class="card-body">
       <h2 class="card-title">{{.Title}}</h2>
