Building the post page

--- a/src/views/pages/home/index.html
+++ b/src/views/pages/home/index.html
@@ -1,4 +1,4 @@
-{{ define "home/index" }} {{template "partials/header" .}}
+{{ define "home/index" }}
 
 <div class="container mx-auto flex justify-center overflow-y-auto">
   <div>
