--- a/src/views/pages/home/show.html
+++ b/src/views/pages/home/show.html
@@ -1,4 +1,4 @@
-{{ define "home/show" }} {{template "partials/header" .}}
+{{ define "home/show" }}
 <div class="container mx-auto">
   <div class="px-6 py-4" hx-target="this" hx-swap="innerHTML">
     <div class="px-2 py-4">{{template "partials/post" .Post}}</div>
