--- a/src/views/pages/profile/index.html
+++ b/src/views/pages/profile/index.html
@@ -1,4 +1,4 @@
-{{ define "profile/index" }} {{template "partials/header" .}}
+{{ define "profile/index" }}
 
 <div class="container mx-auto flex justify-center text-center">
   <div class="max-w-md pt-6">
