General tweaks to style and layout

--- a/src/views/pages/post/index.html
+++ b/src/views/pages/post/index.html
@@ -14,7 +14,7 @@
     </label>
   </div>
 
-  <p class="px-2 pt-10">{{.Post.Text}}</p>
+  <p class="px-2 pt-10 text-justify whitespace-pre-line">{{.Post.Text}}</p>
 </div>
 
 {{ end }}
