--- a/src/views/pages/home/index.html
+++ b/src/views/pages/home/index.html
@@ -2,7 +2,7 @@
 
 <div class="container mx-auto flex justify-center overflow-y-auto">
   <div>
-    <div class="max-w-md pt-6 text-center">
+    <div class="pt-6 text-center">
       <h1 class="text-5xl font-medium">Pondr</h1>
       <p class="py-6">Ask questions. Get answers. Pondr.</p>
       <div class="divider"></div>
