--- a/src/views/partials/post.html
+++ b/src/views/partials/post.html
@@ -1,10 +1,10 @@
 <a href="/post/{{ .Id }}">
   <div
-    class="card w-96 bg-base-200 border border-base-200 hover:border-neutral hover:cursor-pointer"
+    class="card bg-base-200 border border-base-200 hover:border-neutral hover:cursor-pointer"
   >
     <div class="card-body">
       <h2 class="card-title">{{.Title}}</h2>
-      <p>{{.Text}}</p>
+      <p class="line-clamp-6">{{.Text}}</p>
       <div class="card-actions justify-start">
         <div><span>Author Id: </span>{{.AuthorId}}</div>
         <div>
