--- a/src/views/layouts/main.html
+++ b/src/views/layouts/main.html
@@ -12,6 +12,10 @@
     /> -->
     <!-- <script src="/javascript/htmx/htmx-1.9.6.min.js"></script> -->
     <!-- <script src="/javascript/main.js"></script> -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
     <link rel="stylesheet" href="/css/output.min.css" />
   </head>
 
