--- a/src/views/pages/home/index.html
+++ b/src/views/pages/home/index.html
@@ -1,6 +1,6 @@
 {{ define "home/index" }}
 
-<div class="container mx-auto flex justify-center overflow-y-auto">
+<div class="container mx-auto flex justify-center">
   <div>
     <div class="pt-6 text-center">
       <h1 class="text-5xl font-medium">Pondr</h1>
