--- a/src/views/pages/createPost/index.html
+++ b/src/views/pages/createPost/index.html
@@ -1,5 +1,29 @@
 {{ define "createPost/index" }}
 
-<div class="container mx-auto py-6">Hello this is a test.</div>
+<div class="container mx-auto flex flex-col items-center h-full">
+
+  <h1 class="basis-2/12 text-5xl font-medium text-center pt-6">Create a Post</h1>
+
+  <form hx-post="/post" class="w-full max-w-xl">
+    <div>
+      <label class="label label-text">Title</label>
+      <input type="text" placeholder="Title" class="input input-bordered w-full" name="title" required />
+    </div>
+
+    <div class="pt-4">
+      <label class="label label-text">Write your masterpiece</label>
+      <textarea class="textarea textarea-bordered h-44 w-full" placeholder="It won't write itself..." name="text" required></textarea>
+    </div>
+
+    <div class="flex justify-end py-4">
+      <button
+        class="btn btn-primary px-6"
+        type="submit"
+      >
+        Create
+      </button>
+    </div>
+  </form>
+</div>
 
 {{ end }}
