--- a/src/views/partials/header.html
+++ b/src/views/partials/header.html
@@ -12,7 +12,7 @@
     />
   </div>
   <div class="basis-1/6 justify-end">
-    <a class="btn text-primary" role="button" href="/create-post">Create</a>
+    <a class="btn text-primary" role="button" href="/post/create">Create</a>
     <a class="btn" role="button" href="/profile">Profile</a>
   </div>
 </header>
