Working on integrating sqlite db

--- a/src/views/pages/post/index.html
+++ b/src/views/pages/post/index.html
@@ -6,7 +6,7 @@
   <div class="flex justify-between px-2 text-base-content">
     <label class="label-text">
       <span>Author</span>
-      <span class="pl-2">{{.Post.AuthorId}}</span>
+      <span class="pl-2">{{.Post.AuthorID}}</span>
     </label>
     <label class="label-text">
       <span>Posted</span>
