--- a/src/views/partials/post.html
+++ b/src/views/partials/post.html
@@ -1,4 +1,4 @@
-<a href="/post/{{ .Id }}">
+<a href="/post/{{ .ID }}">
   <div
     class="card bg-base-200 border border-base-200 hover:border-neutral hover:cursor-pointer"
   >
@@ -6,7 +6,7 @@
       <h2 class="card-title">{{.Title}}</h2>
       <p class="line-clamp-6">{{.Text}}</p>
       <div class="card-actions justify-start">
-        <div><span>Author Id: </span>{{.AuthorId}}</div>
+        <div><span>Author ID: </span>{{.AuthorID}}</div>
         <div>
           <span>Created At: </span>
           {{.CreatedAt.Format "Jan 02, 2006 15:04:05 UTC"}}
